# wg-rs

./: Cargo.toml  README.md
src/: error.rs  key_bytes.rs  lib.rs
src/device/: allowed_ip.rs  api.rs  mod.rs  peer.rs
src/noise/: handshake.rs  mod.rs  rate_limiter.rs  timers.rs
src/tun/: codec.rs  header.rs  io.rs  mod.rs  stream.rs
