[package]
name = "wg-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [
    "full",
] }
libc = "0.2"
futures = { version = "0.3.0", features = [
    "async-await",
] }
tokio-util = { version = "0.7", features = [
    "codec",
] }
bytes = "1"
futures-util = { version = "0.3", features = [
    "sink",
] }
thiserror = "1"
ip_network = "0.4"
ip_network_table = "0.2"
