[package]
name = "wg-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [
    "full",
] }
libc = "0.2"
futures = { version = "0.3.0", features = [
    "async-await",
] }
tokio-util = { version = "0.7", features = [
    "codec",
] }
bytes = "1"
futures-util = { version = "0.3", features = [
    "sink",
] }
thiserror = "1"
ip_network = "0.4"
ip_network_table = "0.2"
ring = "0.16"
# x25519-dalek = { version = "=2.0.0-rc.3", features = [
#     "reusable_secrets",
#     "static_secrets",
# ] }
base64 = "0.21"
rand_core = { version = "0.6.3", features = [
    "getrandom",
] }
# boringtun = { git = "https://github.com/lz1998/boringtun.git", branch = "master" }
boringtun = { path = "../boringtun/boringtun" }
dashmap = "5.2"
tracing = "0.1"
socket2 = { version = "0.5", features = [
    "all",
] }
